adjust (modify comment button and add comment button), change login feature on header for more comfortable visibility. Fix unusables variable on controller and model.

--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -73,6 +73,12 @@ body {
     font-size: 3rem;
 }
 
+.btnLog {
+    margin-right: 2%;
+    max-width: 110px;
+    max-height: 80px;
+}
+
 @media screen and (max-width: 992px) {
     .headerPage img {
         margin-top: 4%;
@@ -82,7 +88,11 @@ body {
 
     .headerPage h1 {
         padding-top: 5%;
-        font-size: 2.3rem;
+        font-size: 2.1rem;
+    }
+
+    .btnLog {
+        margin-top: 4%;
     }
 }
 
@@ -180,11 +190,6 @@ body {
 .formDrop strong {
     font-family: "Aquire", "sans-serif";
 }
- 
-
-/*@media screen and (max-width: 992px) {
-    
-}*/
 
 /* ------------------------------ Contenu ------------------------------ */
 
@@ -197,6 +202,7 @@ body {
     margin-top: 3%;
     font-family: "Aquire", "Aquire Bold", "sans-serif";
 }
+
 .alert-success, .alert-danger {
     font-family: "Aquire", "AquireBold", "sans-serif";
 }
@@ -328,6 +334,10 @@ body {
     margin-left: 10%;
 }
 
+.adminUpdateArticle {
+    font-family: "Raleway", sans-serif;
+}
+
 .deleteArticle {
     margin-left: 25%;
     margin-top: 1%;
@@ -359,6 +369,11 @@ body {
 
 /* ---------- Commentaire détail article ---------- */
 
+.divider {
+    margin-left: 15%;
+    border-bottom: 2px solid black;
+}
+
 .detailComSection {
     font-family: "Aquire", "AquireBold", "sans-serif";
     max-width: 90%;
@@ -367,7 +382,7 @@ body {
 .detailComSection h4 {
     font-size: 1.6rem;
     margin-left: 10%;
-    margin-bottom: 4%;
+    margin-bottom: 2%;
 }
 
 .detailComSection h5 {
@@ -399,25 +414,33 @@ body {
 }
 
 .btnModifyCom {
-    display: flex;
-    justify-content: space-between;
-    margin-left: 20%;
-    padding-bottom: 2%;
-    
+    max-width: 600px;
+    margin-left: 15%;
+    margin-bottom: 4%;
 }
 
-.buttonComment {
-    margin-left: 25%;
-}
-
-.textAddComment {
+.btnModifyCom textarea {
     font-family: "Raleway", sans-serif;
 }
 
-.divider {
-    margin-left: 15%;
-    border-bottom: 2px solid black;
+.btnAddComment {
+    max-width: 850px;
+    margin-left: 13%;
 }
+
+.btnAdd button {
+    width: 200px;
+}
+
+.btnAdd {
+    display: flex;
+    justify-content: space-between;
+}
+
+.btnAddComment textarea {
+    font-family: "Raleway", sans-serif;
+}
+
 
 @media screen and (max-width: 992px) {
 
@@ -585,10 +608,6 @@ footer {
 
 /* ------------------------------ Zone Admin ------------------------------ */
 
-#admin {
-    margin-top: 5%;
-}
-
 /* ---------- Formulaire nouvel article ---------- */
 
 .formNewPost {
@@ -596,6 +615,7 @@ footer {
     border: 2px solid black;
     padding-top: 3%;
     background-color: white;
+    max-height: 800px;
 }
 
 .formNewPost h4 {
@@ -632,6 +652,11 @@ footer {
  .commentModeration p, em {
     margin-left: 15%;
     padding-bottom: 2%;
+ }
+
+ .commentaireModeration {
+    padding-left: 5%;
+    font-family: "Raleway",sans-serif;
  }
 
  .commentButtonModeration {
